fixing alignment in footer

--- a/fogw0001-landing-page-mtm6201/css/main.css
+++ b/fogw0001-landing-page-mtm6201/css/main.css
@@ -310,7 +310,7 @@ div.icons{
 
     /*fixing spacing of footer form and text*/
     div.foot-text-table{
-        margin:1rem 0 3rem 8rem;
+        margin:0rem 0 3rem 8rem;
     }
 
     /*adjusting spacing of footer icons*/
